Fixed Skills Section bottom spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -69,9 +69,6 @@ from Bootstrap Grid ----------------------------*/
 }
 
 /*---------- Feature Sections -----------*/
-h2 {
-  
-}
 
 .feature-content {
   padding: 5rem 0;
